--- a/src/components/NavigationHeader/NavigationHeader.mod.css
+++ b/src/components/NavigationHeader/NavigationHeader.mod.css
@@ -1,4 +1,4 @@
-.nav-header {
+.header {
   height: 60px;
   background-color: #222;
   color: white;
@@ -6,7 +6,7 @@
   width: 100%;
 }
 
-.nav-header-inner {
+.inner-content {
   max-width: 960px;
   margin: 0 auto;
   display: flex;
@@ -15,9 +15,9 @@
   align-items: center;
 }
 
-.nav-title {
+.title {
   font-size: 20px;
-  font-weight: normal;
+  font-weight: 300;
   letter-spacing: 0.5px;
 }
 
