attach basic containers to routes (index, create)

--- a/src/components/NavigationHeader/NavigationHeader.mod.css
+++ b/src/components/NavigationHeader/NavigationHeader.mod.css
@@ -6,6 +6,11 @@
   width: 100%;
 }
 
+.header a {
+  text-decoration: none;
+  color: white;
+}
+
 .inner-content {
   max-width: 960px;
   margin: 0 auto;
