--- a/src/components/NavigationHeader/NavigationHeader.mod.css
+++ b/src/components/NavigationHeader/NavigationHeader.mod.css
@@ -4,6 +4,7 @@
   color: white;
   margin-bottom: 20px;
   width: 100%;
+  font-size: 16px;
 }
 
 .header a {
@@ -12,8 +13,6 @@
 }
 
 .inner-content {
-  max-width: 960px;
-  margin: 0 auto;
   display: flex;
   flex: 1;
   height: 100%;
