--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
 .semibold {
