--- a/src/components/NavigationHeader/NavigationHeader.mod.css
+++ b/src/components/NavigationHeader/NavigationHeader.mod.css
@@ -1,10 +1,12 @@
 .header {
   height: 60px;
-  background-color: #222;
+  background-color: rgba(35, 35, 35, 0.8);
   color: white;
   margin-bottom: 20px;
   width: 100%;
   font-size: 16px;
+  position: sticky;
+  top: 0;
 }
 
 .header a {
