--- a/src/components/NavigationHeader/NavigationHeader.mod.css
+++ b/src/components/NavigationHeader/NavigationHeader.mod.css
@@ -1,12 +1,18 @@
 .header {
   height: 60px;
-  background-color: rgba(35, 35, 35, 0.8);
+  /*background-color: rgba(35, 35, 35, 0.8);*/
   color: white;
   margin-bottom: 20px;
   width: 100%;
   font-size: 16px;
   position: sticky;
   top: 0;
+  background-color: transparent;
+  background-image: linear-gradient(
+    90deg,
+    rgba(35, 35, 35, 0.7) 3%,
+    rgba(35, 35, 35, 0.9) 103%
+  );
 }
 
 .header a {
