--- a/src/components/PasswordInput/PasswordInput.mod.css
+++ b/src/components/PasswordInput/PasswordInput.mod.css
@@ -1,8 +1,8 @@
-.input-wrapper {
+.password-input {
   position: relative;
 }
 
-.input-wrapper i {
+.password-input i {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
@@ -15,14 +15,10 @@
   opacity: 0.8;
 }
 
-.has-error input {
-  border: 1px solid red;
-  background-color: rgba(255, 0, 0, 0.05);
-}
-
-.field-error {
-  font-size: 12px;
-  font-weight: 600;
-  color: red;
-  margin: 3px 0;
+.password-input input {
+  width: 100%;
+  font-size: 14px;
+  height: 38px;
+  box-sizing: border-box;
+  padding: 0 5px;
 }
